--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,32 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  /* overflow: scroll; */
+  overflow-y: auto;
   position: relative;
+}
+
+/* The scrollbar track */
+.box::-webkit-scrollbar {
+  width: 10px; /* Width of the vertical scrollbar */
+  height: 10px; /* Height of the horizontal scrollbar */
+}
+
+/* The track (background of the scrollbar) */
+.box::-webkit-scrollbar-track {
+  background: var(--color-background-100); /* Light gray background */
+  border-radius: 10px; /* Optional: Rounded corners */
+}
+
+/* The draggable part of the scrollbar */
+.box::-webkit-scrollbar-thumb {
+  background-color: var(--color-background-900); /* Darker gray */
+  border-radius: 10px; /* Rounded corners */
+  border: 2px solid var(--color-background-500); /* Adds padding around the scrollbar thumb */
+}
+
+/* Hover effect on scrollbar */
+.box::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Darker color on hover */
 }
 
 .loader {
@@ -153,7 +177,6 @@ body {
   column-gap: 2.4rem;
   font-size: 1.6rem;
   align-items: center;
-
   padding: 1.6rem 3.2rem;
   border-bottom: 1px solid var(--color-background-100);
 }
